@@ -2,6 +2,17 @@
 
         Reviewed by Eric Seidel.
 
+        [bzt] Add test for previous typo fix
+        https://bugs.webkit.org/show_bug.cgi?id=33083
+
+        A trivial test for a trivial fix, as requested by Eric.
+
+        * Scripts/modules/bugzilla_unittest.py:
+
+2010-01-03  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         Implement mac-ews
         https://bugs.webkit.org/show_bug.cgi?id=33072
 
